# OpenHW-Video-Upscaling-STAR

./: .gitignore  analyze_quality.py  openhw_optimized_torch_v2.yml  profiler_input.csv  profiler_input.txt  test.cpp
analysis/: 20250629_165351_lpips_023_klingai_reedit.txt  20250629_165351_psnr_023_klingai_reedit.txt  20250629_165351_ssim_023_klingai_reedit.txt  20250629_165351_vmaf_023_klingai_reedit
analysis/patient_1_L2/: 20250702_003040_lpips_patient_1_L2.txt  20250702_003040_psnr_patient_1_L2.txt  20250702_003040_ssim_patient_1_L2.txt  20250702_003040_vmaf_patient_1_L2
analysis/patient_1_L3/: 20250702_003057_lpips_patient_1_L3.txt  20250702_003057_psnr_patient_1_L3.txt  20250702_003057_ssim_patient_1_L3.txt  20250702_003057_vmaf_patient_1_L3
analysis/patient_1_R1/: 20250702_003114_lpips_patient_1_R1.txt  20250702_003114_psnr_patient_1_R1.txt  20250702_003114_ssim_patient_1_R1.txt  20250702_003114_vmaf_patient_1_R1
analysis/patient_1_R1_2/: 20250702_003130_lpips_patient_1_R1_2.txt  20250702_003130_psnr_patient_1_R1_2.txt  20250702_003130_ssim_patient_1_R1_2.txt  20250702_003130_vmaf_patient_1_R1_2
analysis/patient_1_R2/: 20250702_003146_lpips_patient_1_R2.txt  20250702_003146_psnr_patient_1_R2.txt  20250702_003146_ssim_patient_1_R2.txt  20250702_003146_vmaf_patient_1_R2
analysis/patient_1_R3/: 20250702_003201_lpips_patient_1_R3.txt  20250702_003201_psnr_patient_1_R3.txt  20250702_003201_ssim_patient_1_R3.txt  20250702_003201_vmaf_patient_1_R3
analysis/patient_2_L1/: 20250702_003217_lpips_patient_2_L1.txt  20250702_003217_psnr_patient_2_L1.txt  20250702_003217_ssim_patient_2_L1.txt  20250702_003217_vmaf_patient_2_L1
analysis/patient_2_L2/: 20250702_003243_lpips_patient_2_L2.txt  20250702_003243_psnr_patient_2_L2.txt  20250702_003243_ssim_patient_2_L2.txt  20250702_003243_vmaf_patient_2_L2
analysis/patient_2_L3/: 20250702_003309_lpips_patient_2_L3.txt  20250702_003309_psnr_patient_2_L3.txt  20250702_003309_ssim_patient_2_L3.txt  20250702_003309_vmaf_patient_2_L3
analysis/patient_2_R1/: 20250702_003334_lpips_patient_2_R1.txt  20250702_003334_psnr_patient_2_R1.txt  20250702_003334_ssim_patient_2_R1.txt  20250702_003334_vmaf_patient_2_R1
analysis/patient_2_R2/: 20250702_003400_lpips_patient_2_R2.txt  20250702_003400_psnr_patient_2_R2.txt  20250702_003400_ssim_patient_2_R2.txt  20250702_003400_vmaf_patient_2_R2
analysis/patient_2_R3/: 20250702_003426_lpips_patient_2_R3.txt  20250702_003426_psnr_patient_2_R3.txt  20250702_003426_ssim_patient_2_R3.txt  20250702_003426_vmaf_patient_2_R3
analysis_scripts/: E*-warp.py  LPIPS.py
cogvideox-based/inference/: gradio_web_demo.py  streamlit_web_demo.py
cogvideox-based/sat/: diffusion_video.py  sample_sr.py
cogvideox-based/sat/sgm/modules/: attention.py
cogvideox-based/sat/sgm/modules/diffusionmodules/: model.py
cogvideox-based/sat/vae_modules/: attention.py
input/text/: prompt.txt  prompt_temp.txt
sdpa-kernel/: CMakeLists.txt  CMakePresets.json  clean.sh  script_build.sh
sdpa-kernel/common/: CMakeLists.txt
sdpa-kernel/common/include/: constants.h  error_codes.h  platform.h
sdpa-kernel/common/src/: error_handling.cpp  platform_detection.cpp
sdpa-kernel/examples/: CMakeLists.txt
sdpa-kernel/scripts/: build.sh
sdpa-kernel/src/: CMakeLists.txt
sdpa-kernel/tests/: CMakeLists.txt
sdpa-kernel/utils/: CMakeLists.txt
sdpa-kernel/utils/include/: debug_utils.h  math_utils.h  memory_utils.h
sdpa-kernel/utils/src/: debug_utils.cpp  math_utils.cpp  memory_utils.cpp
video_super_resolution/scripts/: inference.py  inference_loop.sh  inference_loop_and_log.sh  inference_multi.py  inference_sr.sh  logger.sh  profile_inference.py
video_super_resolution/scripts/test/: inference_batch.sh  inference_single.sh
video_to_video/: video_to_video_model.py
video_to_video/diffusion/: diffusion_sdedit.py  solvers_sdedit.py
video_to_video/modules/: unet_v2v.py
video_to_video/modules/sdpa/: triton_sdpa.py
